Cambio de ruta relativa mal escrita

--- a/html2/experiencia.html
+++ b/html2/experiencia.html
@@ -25,7 +25,7 @@
     <p>
       <ul>
         <li><a href="../index.html">Inicio</a></li>
-        <li><a href="../html/experiencia.html">Experiencia</a></li>
+        <li><a href="../html/educación.html">Experiencia</a></li>
       </ul>
     </p>
     <h2>Experiencia</h2>
