Correción ortográfica de la ruta relativa

--- a/html2/experiencia.html
+++ b/html2/experiencia.html
@@ -25,7 +25,7 @@
     <p>
       <ul>
         <li><a href="../index.html">Inicio</a></li>
-        <li><a href="../html/educación.html">Educación</a></li>
+        <li><a href="../html/educacion.html">Educación</a></li>
       </ul>
     </p>
     <h2>Experiencia</h2>
