--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,user-scalable=no">
     <title>Hoja de Vida</title>
+    <link rel="stylesheet" href="css/estilos.css">
   </head>
   <body>
    <img src="img/logo.svg" alt="logo.svg" title="logo.svg" width="200" height="150">
